@@ -337,9 +337,9 @@ garanti:
   password: "123qweASD"
 
 global_collect:
-  merchant_id: 1428
-  api_key_id: 96f16a41890565d0
-  secret_api_key: g/VQ432G02bFpwg/6EY7uiPRSZxKMbQ87Kal716XORA=
+  merchant_id: 2196
+  api_key_id: c91d6752cbbf9cf1
+  secret_api_key: xHjQr5gL9Wcihkqoj4w/UQugdSCNXM2oUQHG5C82jy4=
 
 global_transport:
   global_user_name: "USERNAME"
