@@ -45,6 +45,19 @@ class GlobalCollectTest < Test::Unit::TestCase
     assert_equal 1, response.responses.size
   end
 
+  def test_trucates_first_name_to_15_chars
+    credit_card = credit_card('4567350000427977', { first_name: "thisisaverylongfirstname" })
+
+    response = stub_comms do
+      @gateway.authorize(@accepted_amount, credit_card, @options)
+    end.check_request do |endpoint, data, headers|
+      assert_match(/thisisaverylong/, data)
+    end.respond_with(successful_authorize_response)
+
+    assert_success response
+    assert_equal "000000142800000000920000100001", response.authorization
+  end
+
   def test_failed_authorize
     response = stub_comms do
       @gateway.authorize(@rejected_amount, @declined_card, @options)
