@@ -2,6 +2,7 @@
 
 == HEAD
 * JetPay: Adjust refund and void transaction types [davidsantoso] #2356
+* GlobalCollect: Truncate firstName field to 15 characters [davidsantoso]
 
 == Version 1.64.0 (March 6, 2017)
 * Authorize.net: Allow settings to be passed for CIM purchases [fwilkins] #2300
